fix homepage alignment

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -17,3 +17,10 @@ body {
     padding-right: 5px;
   }
 }
+.thumbnails.dark-magic{
+  display:flex;
+  flex-wrap:wrap;
+}
+.thumbnails.dark-magic > .span3:nth-of-type(4n+1){
+  margin-left:0;
+}
